--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@
                                     <div class="allOverDiv">
                                         
                                         <input type="number" class="form-control overall-input" id="overallbe1_mark"
-                                            >
+                                            disabled>
                                         <span>/ 1400</span>
                                     </div>
 
                                     <div class="allOverDiv">
                                     
                                         <input type="number" class="form-control overall-input" id="overallbe1_perc"
-                                            >
+                                            disabled>
                                         <span>%</span>
                                     </div>
 
