--- a/result.html
+++ b/result.html
@@ -104,7 +104,7 @@
 
 <body>
 
-    <div class="container" style="border: 1px solid black;margin:4rem auto">
+    <div class="container" style="margin:5rem auto">
 
         <div class="row mt-3">
 
@@ -119,7 +119,7 @@
 
             <div class="mb-3 col-6 studentBio">
                 <label for="numberField" class="form-label studentBio-label">PRN</label>
-                <input type="text" class="form-control studentBio-input" id="numberField" pattern="\d{17}" required>
+                <input type="number" class="form-control studentBio-input" id="numberField" pattern="\d{17}" required>
             </div>
 
             <div class="mb-3 col-6 studentBio">
